--- a/src/components/InputComponent/InputComponent.module.css
+++ b/src/components/InputComponent/InputComponent.module.css
@@ -4,7 +4,7 @@
     border: 1.5px solid var(--input-border, #ccc);
     border-radius: var(--input-border-radius, 8px);
     padding: var(--input-padding, 16px 0 16px 10px);
-    margin: 24px 0 0 0;
+    margin: var(--input-margin, 24px 0 0 0);
     width: 100%;
     box-shadow: var(--input-shadow, #c3c3c3 0px 5px 5px 0px);
     font-size: var(--input-font-size, 16px);
